fix: narrow config pages on mobile

--- a/frontend/src/styles/_animations.scss
+++ b/frontend/src/styles/_animations.scss
@@ -105,8 +105,8 @@
     content: '';
     position: absolute;
     top: 0;
-    left: -8px;
-    right: -8px;
+    left: 0;
+    right: 0;
     bottom: 0;
     backdrop-filter: blur(4px);
     z-index: 100;
